# dep_srpc

./: .gitignore  CMakeLists.txt  README.md  cxx11_check.cmake  srpc-files.cmake  srpc_files.cmake
client/: CMakeLists.txt
common/: CMakeLists.txt  buffer.h  srpc.proto  transport-iface.h
include/srpc/client/connector/: interface.h
include/srpc/client/connector/async/: tcp.h  udp.h
include/srpc/client/connector/async/impl/: templ.h
include/srpc/common/: buffer.h  const_buffer.h  factory.h  result.h  transport-iface.h
include/srpc/common/cache/: shared.h  simple.h
include/srpc/common/cache/traits/: raw.h  shared.h
include/srpc/common/config/: asio-forward.h  asio.h  atomic.h  chrono.h  condition-variable.h  functional.h  handle.h  memory.h  mutex.h  stdint.h  system-forward.h  system.h
include/srpc/common/details/: list.h  variadic-params.h
include/srpc/common/hash/: crc32.h  factory.h  interface.h  none.h
include/srpc/common/observers/: base.h  common.h  define.h  scoped-subscription.h  simple.h  subscription.h
include/srpc/common/observers/traits/: simple.h
include/srpc/common/protobuf/: channel.h  closure-holder.h  controller.h  service.h  stub.h
include/srpc/common/protobuf/service/: wrapper.h
include/srpc/common/protocol/: binary.h  noname.h
include/srpc/common/protocol/traits/: lowlewel.h
include/srpc/common/queues/: condition.h
include/srpc/common/queues/traits/: priority.h  simple.h
include/srpc/common/result/: base.h  result.h
include/srpc/common/result/traits/: shared.h  value.h
include/srpc/common/sizepack/: fixint.h  none.h  types.h  varint.h  zigzag.h
include/srpc/common/timers/: deadline.h  once.h  periodical.h  ticks.h  types.h
include/srpc/common/timers/calls/: once.h  periodical.h
include/srpc/common/timers/traits/: monotonic.h
include/srpc/common/transport/: interface.h  types.h
include/srpc/common/transport/async/: base.h  stream.h  tcp.h  udp.h
include/srpc/common/transport/delegates/: message.h  stream.h
include/srpc/server/acceptor/: interface.h
include/srpc/server/acceptor/async/: tcp.h  udp.h
include/srpc/server/listener/: interface.h  tcp.h  udp.h
lib/client/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/protocol-base/: errors.proto  lowlevel.proto  options.proto  srpc.proto
lib/server/: CMakeLists.txt
lib/server/listener/: base.h  tcp.cpp  udp.cpp
server/: CMakeLists.txt
test/: CMakeLists.txt
test/client/: CMakeLists.txt  client.cpp  main.cpp
test/common/: CMakeLists.txt  buffer.hpp  t.proto  tls-store.h  transport-iface.h
test/server/: CMakeLists.txt  main.cpp  protocol.cpp  server.cpp
tst/: async-reader.hpp  client.cpp  linux-tuntap.cpp  main.cpp  options.h  server.cpp
